# Lacan-NTSport-Website

./: buy-premium (copy).html  lnschat.js  main.py  original_code.py  premium_code.py  pyproject.toml
backend/data/: comp.py  player.py  premium.py
backend/login/: login.py
backend/maintenance/: maintenance.py
backend/premium/: premium.py
backend/resources/: database.py  player_database.py
backend/settings/: password.py
backend/signup/: signup.py
backend/stats/: database.py
styles/: home.css  typerace.css
templates/: A.html  commands.html  comp_invalid.html  comp_page.html  dashboard.html  home.html  invite.html  lnschat.html  login.html  make_comp.html  privacy.html  settings.html  signup.html  stats.html  stats_page.html  stocks.html  support.html  team.html
templates/10_stats/: racer-stats.html  team-stats.html
templates/1_home/: comingsoon.html  dashboard.html  home.html
templates/2_bot/: commands.html  invite.html  newsletter.html  privacy.html  support.html  team.html
templates/4_old_stats/: stats.html  stats_page.html  user_search.html
templates/5_games/: hangman.html  shop.html  typerace.html  words.txt
templates/6_other/: lnschat.html  spoiler.html  vote.html
templates/7_news/: news.html  updates.html
templates/8_user/: login.html  signup.html
templates/9_premium/: buy-premium.html  notpremium.html  postpremium.html  premium-info.html  premium-terms.html  premium.html  ty-premium.html  upgrade.html
templates/games/: hangman.html  typerace.html  words.txt
templates/general/: 404.html  head.html
templates/in_work/: cards.html  (+7 more)
(+22 files in other folders)
