[tool.poetry]
name = "repl_python3_Official-LNS-Website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.0.1"
Flask = "^2.0.2"
Flask-Discord = "^0.1.64"
discord = "^1.7.3"
"NT.py" = "^4.1.5"
dnspython = "^2.2.0"
quart = "^0.16.3"
termcolor = "^1.1.0"
pyppeteer = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
