[tool.poetry]
name = "official_lns_website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
"NT.py" = "^4.1.5"
dnspython = "^2.2.1"
pymongo = "^4.1.1"
Flask-Discord = "^0.1.69"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
